--- a/db/隔离级别及锁.md
+++ b/db/隔离级别及锁.md
@@ -11,13 +11,13 @@
 
 ### 2.隔离级别
 
-##### 在介绍隔离级别前首先，先讨论一下，多用户并发操作可能会发生的问题： 
+#### 在介绍隔离级别前首先，先讨论一下，多用户并发操作可能会发生的问题： 
 
 1. **脏读**：可以读取未提交事务的数据；
 2. **不可重复读**：同一个事务中多次执行同一个select，读取到的数据发生了改变；
 3. **幻读**：同一个事务中多次执行同一个select，读取到的数据**行数**发生了改变。（行数减少或者增加，被其他事务 insert/delete并且提交）。
 
-##### **不可重复读**和**幻读**的区分：
+#### **不可重复读**和**幻读**的区分：
 
 * **不可重复读**：同一个select语句，获得到的数据字段值发生变化；重点在<font color='red'>修改</font>
 * **幻读**：同一个select语句，获取到的数据的数量不一样；重点在于<font color="red">新增或者删除</font>
@@ -28,8 +28,8 @@
 * 对后者，要锁定满足条件的记录及所有记录之间的间隙(gap)，需要使用到gap lock。
 
 
-| 隔离级别                                                    | 内容                                                         | 幻读       | 不可重复读 | 脏读       |
-| :---------------------------------------------------------- | ------------------------------------------------------------ | ---------- | ---------- | ---------- |
+| 隔离级别                                                     | 内容                                                         | 幻读       | 不可重复读 | 脏读       |
+| :----------------------------------------------------------- | ------------------------------------------------------------ | ---------- | ---------- | ---------- |
 | 可串行化serializable(<span id="S">**S**</span>)             | 强制事务串行化执行                                           | **不允许** | **不允许** | **不允许** |
 | 未提交读 <br> read uncommitted(<span id="RU">**RU**</span>) | 可以读取未提交的数据(未提交的数据称为**脏读**)               | **允许**   | **允许**   | **允许**   |
 | 已提交读 <br>read committed(<span id="RC">**RC**</span>)    | 只能读取已提交的数据                                         | **允许**   | **允许**   | **不允许** |
@@ -41,55 +41,51 @@
 
 MySQL的存储引擎分为MyISAM和InnoDB，其中MyISAM支持**表级锁**，InnoDB支持**表记锁**、**行级锁**（<font color='red'>默认</font>）
 
-| 名称   | 特点                                                         |
-| ------ | ------------------------------------------------------------ |
-| 表级锁 | 开销小，加锁快，锁力度大。发生冲突的概率最高，并发度最低，不会出现死锁 |
-| 行级锁 | 开销大，加锁慢，锁力度最小。发生冲突概率最低，并发度最高，会出现死锁 |
-| 页面锁 | 开销和加锁时间介于表、行级锁之间。锁力度介于表、行之间，并发度一般，会出现死锁 |
-
+|名称|特点|
+|----|-----|
+|表级锁|开销小，加锁快，锁力度大。发生冲突的概率最高，并发度最低，不会出现死锁|
+|行级锁|开销大，加锁慢，锁力度最小。发生冲突概率最低，并发度最高，会出现死锁|
+|页面锁|开销和加锁时间介于表、行级锁之间。锁力度介于表、行之间，并发度一般，会出现死锁|
 #### InnoDB的行锁模式
-
 行锁的实现方式：InnoDB的行锁通过索引上的索引项来实现（Oracle通过对数据中相应数据行加锁来实现），即**只用通过索引条件检索数据，InnoDB才会使用行级锁，否则将使用表级锁**。实际应用中，需要注意行锁的特点，不然会导致大量的锁冲突，影响并发性能。
 
 
-| 名称                                    | 描述                                                         | 加锁方式                                                     |
-| --------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| 共享锁(<span id="S">**S**</span>)       | 读锁，加了S锁的记录，允许其他事物再加S锁，不允许再加X锁      | 普通查询(select)InnoDB自动增加S锁，查询显式加锁：select ... lock in share mode |
-| 排他锁(<span id="X">**X**</span>)       | 写锁，加了X锁的记录，不允许其他事物再加S锁或者X锁            | 执行写操作(update,delete,insert)InnoDB自动增加X锁，查询显示加锁：select ... for update |
-| 意向共享锁(<span id="IS">**IS**</span>) | 事物在打算给数据行增加**S**锁时，事物会在加锁之前增加一个**IS**锁(**表级**) | 由InnoDB自动加，无须用户干预                                 |
-| 意向排他锁(<span id="IX">**IX**</span>) | 事物在打算给数据行增加**X**锁时，事物会在加锁之前增加一个**IX**锁(**表级**) | 同上                                                         |
+|名称|描述|加锁方式|
+|-----|-----|------|
+|共享锁(<span id="S">**S**</span>)|读锁，加了S锁的记录，允许其他事物再加S锁，不允许再加X锁|普通查询(select)InnoDB自动增加S锁，查询显式加锁：select ... lock in share mode|
+|排他锁(<span id="X">**X**</span>)|写锁，加了X锁的记录，不允许其他事物再加S锁或者X锁|执行写操作(update,delete,insert)InnoDB自动增加X锁，查询显示加锁：select ... for update|
+|意向共享锁(<span id="IS">**IS**</span>)|事物在打算给数据行增加**S**锁时，事物会在加锁之前增加一个**IS**锁(**表级**)|由InnoDB自动加，无须用户干预|
+|意向排他锁(<span id="IX">**IX**</span>)|事物在打算给数据行增加**X**锁时，事物会在加锁之前增加一个**IX**锁(**表级**)|同上|
 
-##### Q：意向锁是表级锁？
-
+#### Q：意向锁是表级锁？
 当我们增加一个排他锁时，需要根据意向锁去判断是否有没有数据行被锁定（行锁）：
 
 * 如果意向锁是行锁，需要遍历每一行数据去确认；
 * 如果意向锁是表锁，只需要判断一次可知道有没有数据行被锁定，性能好；
 
 #### 兼容性对比
-
 **注意：上了行级X锁后，行级X锁不会因为有别的事物上IX而堵塞，一个mysql是允许多个行级X锁同时存在，只要他们不是针对<font color='red'>相同的数据行</font>**
 
 
-| 当前锁模式与请求模式是否兼容 | X    | IX   | S    | IS   |
-| ---------------------------- | ---- | ---- | ---- | ---- |
-| X                            | 冲突 | 冲突 | 冲突 | 冲突 |
-| IX                           | 冲突 | 兼容 | 冲突 | 兼容 |
-| S                            | 冲突 | 冲突 | 兼容 | 兼容 |
-| IS                           | 冲突 | 兼容 | 兼容 | 兼容 |
+|当前锁模式与请求模式是否兼容|X|IX|S|IS|
+|----|-----|----|----|----|
+|X|冲突|冲突|冲突|冲突|
+|IX|冲突|兼容|冲突|兼容|
+|S|冲突|冲突|兼容|兼容|
+|IS|冲突|兼容|兼容|兼容|
 
 #### 行锁细分类型
 
 InnoDB行锁是通过给索引上的索引项加索来实现，行锁最终都会落到局促索引上，通过非聚簇索引查询的时候，线锁定非举措索引，然后锁聚簇索引。如果一个查询里既有聚簇，又有非聚簇，则会先锁聚簇索引，再锁非聚簇。
 
-##### 细分类型
+#### 细分类型
 
 * 间隙锁（Gap Lock 下文简称<span id="G">**G**</span>锁）：锁定一个范围，对索引的间隙加锁（前开后开区间(a,b)），防止其他事务插入数据导致的幻读；[详细内容](#G-Info)
 * 记录锁（Record Lock 下文简称<span id="R">**R**</span>锁）：锁直接加在索引记录上面，锁住的是Key
 * 临键锁（Next-Key Lock 下文简称<span id="N">**N**</span>锁）：行锁和间隙锁组合起来（前开后闭区间(a,b]）
 * 插入意向锁（Insert Intention Lock 下文简称<span id="I">**I**</span>锁）：插入时使用的锁。如果插入前，该间隙已经由gap锁，那么Insert会申请插入意向锁。因为了避免幻读，当其他事务持有该间隙的间隔锁，插入意向锁就会被阻塞（不用直接用**G**锁，是因为**G**锁不互斥）
 
-##### 兼容表
+#### 兼容表
 
 | 列想加\行已加索 | G      | R      | N      | I    |
 | --------------- | ------ | ------ | ------ | ---- |
