--- a/db/隔离级别及锁.md
+++ b/db/隔离级别及锁.md
@@ -52,16 +52,13 @@ MySQL的存储引擎分为MyISAM和InnoDB，其中MyISAM支持**表级锁**，In
 
 |名称|描述|加锁方式|
 |-----|-----|------|
-|共享锁(<span id="S">**S**</span>)|读锁，加了S锁的记录，允许其他事物再加S锁，不允许再加X锁|普通查询(select)InnoDB自动增加S锁，查询显式加锁：select ... lock in share mode|
-|排他锁(<span id="X">**X**</span>)|写锁，加了X锁的记录，不允许其他事物再加S锁或者X锁|执行写操作(update,delete,insert)InnoDB自动增加X锁，查询显示加锁：select ... for update|
 |意向共享锁(<span id="IS">**IS**</span>)|事物在打算给数据行增加**S**锁时，事物会在加锁之前增加一个**IS**锁(**表级**)|由InnoDB自动加，无须用户干预|
 |意向排他锁(<span id="IX">**IX**</span>)|事物在打算给数据行增加**X**锁时，事物会在加锁之前增加一个**IX**锁(**表级**)|同上|
+|共享锁(<span id="S">**S**</span>)|读锁，加了S锁的记录，允许其他事物再加S锁，不允许再加X锁|普通查询(select)InnoDB自动增加S锁，查询显式加锁：select ... lock in share mode|
+|排他锁(<span id="X">**X**</span>)|写锁，加了X锁的记录，不允许其他事物再加S锁或者X锁|执行写操作(update,delete,insert)InnoDB自动增加X锁，查询显示加锁：select ... for update|
 
-#### Q：意向锁是表级锁？
-当我们增加一个排他锁时，需要根据意向锁去判断是否有没有数据行被锁定（行锁）：
-
-* 如果意向锁是行锁，需要遍历每一行数据去确认；
-* 如果意向锁是表锁，只需要判断一次可知道有没有数据行被锁定，性能好；
+#### Q：意向锁为什么是表级锁？
+当我们增加一个排他锁时，需要根据意向锁去判断是否有没有数据行被锁定（行锁）：如果意向锁是行锁，需要遍历每一行数据去确认；意向锁是表锁，只需要判断一次可知道有没有数据行被锁定，性能好；
 
 #### 兼容性对比
 **注意：上了行级X锁后，行级X锁不会因为有别的事物上IX而堵塞，一个mysql是允许多个行级X锁同时存在，只要他们不是针对<font color='red'>相同的数据行</font>**
