--- a/db/隔离级别及锁.md
+++ b/db/隔离级别及锁.md
@@ -198,7 +198,7 @@ Record lock, heap no 363 PHYSICAL RECORD: n_fields 3; compact format; info bits 
 
    **总结Insert加索顺序:** [S](#S)中的[N](#N)锁 -> [X](#X)中的[I](#I)锁 -> [X](#X)中的[R](#R)锁
 
-**3. **锁细节分析
+**3. 锁细节分析**
 
 
 
