--- a/db/隔离级别及锁.md
+++ b/db/隔离级别及锁.md
@@ -198,36 +198,58 @@ Record lock, heap no 363 PHYSICAL RECORD: n_fields 3; compact format; info bits 
 
 从日志中可以看到两个Insert事务的持锁情况和等待锁情况：
 
-1. 事务一
+1. 事务T1
    
-   - WAITING FOR THIS LOCK TO BE GRANTED …… lock_mode X locks gap before rec **insert intention waiting** Record lock 等待插入意向排他锁
+   * (1) TRANSACTION : 开始执行插入语句 "INSERT INTO VENDER_ORDER_TASK ......"；
    
-2. 事务二
+   - WAITING FOR THIS LOCK TO BE GRANTED(正在等待锁释放) …… UNIQ_VENDER_ORDER_TASK_ORDER_ID_VENDER_ID（唯一索引）…… lock_mode X locks gap before rec **insert intention waiting** Record lock (等待插入意向排他锁)  …… PHYSICAL RECORD (物理记录)，间隙区间（s,R) , (未知 , -o)  , (未知 , !9）;
    
-   - HOLDS THE LOCK(S) …… lock mode S locks gap before rec Record lock 
-   - WAITING FOR THIS LOCK TO BE GRANTED …… lock_mode X locks gap before rec **insert intention waiting** Record lock 等待插入意向排他锁
+2. 事务T2
 
-**2.补充Insert中对唯一索引的加索逻辑：**
+   * (2) TRANSACTION : 开始执行插入语句 "INSERT INTO VENDER_ORDER_TASK ......" 事务一和二的插入语句相同；
 
-1. 插入时先对唯一索引（unique key 下文简称**UK**）进行冲突检测，先对目标行加[S](#SK)锁中的[N](#N)锁（**S** lock中的next key lock 下文简称**S**、**N**），这个锁如果最终插入成功（该记录在等待期间被其他事务删除，次所被同事删除）；
-2. 如果条件1成功，对应的行增加[X](#X)锁中的[I](#I)锁；
-3. 如果条件2成功，插入记录，并对记录增加[X](#X)锁中的[R](#R)锁（有可能是<a href="http://mysql.taobao.org/monthly/2020/09/06/">隐式锁</a>）
+   - HOLDS THE LOCK (持有锁) …… lock_mode S locks gap before rec (间隙锁) ……UNIQ_VENDER_ORDER_TASK_ORDER_ID_VENDER_ID（唯一索引）…… PHYSICAL RECORD (物理记录)……间隙区间（s,R) , (未知 , -o)  , (未知 , !9）;
+   - WAITING FOR THIS LOCK TO BE GRANTED(正在等待锁释放) …… UNIQ_VENDER_ORDER_TASK_ORDER_ID_VENDER_ID（唯一索引）…… lock_mode X locks gap before rec **insert intention waiting** Record lock (等待插入意向排他锁)  …… PHYSICAL RECORD (物理记录)，间隙区间（s,R) , (未知 , -o)  , (未知 , !9）;
 
-   **总结Insert加索顺序:** [S](#S)中的[N](#N)锁 -> [X](#X)中的[I](#I)锁 -> [X](#X)中的[R](#R)锁
+   从事务日志中排查发现事务T1和事务T2的插入语句时相同的。事务T1等待事务T2中的 HOLDS THE LOCK 持有的G锁(间隙锁)，从上文中得知[**G**锁](#G)与[**I**锁](#I)(插入意向锁)是不兼容的，事务一阻塞等待。那么事务T2在等待的事务T1中的锁是哪个，从日志中没有看到。
+
+**2.包含唯一索引Insert的流程、加锁逻辑及Mysql官方文档解释：** （此处的S 和 X 标示共享和排他）
+
+   **流程：**
+
+1. 找到大于W的第一条记录E，以及前一条记录Q。(W、E、Q代表数据行)
+
+2. 如果E上面没有gap/next-key lock的话，进入第三步骤 否则等待(对其next-rec加insert intension lock，由于有gap锁，所以等待)
+
+3. 检查Q: 判断Q是否等于N： 
+
+   * 如果不等: 则完成插入（结束）;
+
+   * 如果相等: 再判断Q 是否有锁；
+     * 如果没有锁: 报1062错误（duplicate key） --说明该记录已经存在，报重复值错误; 
+     *  如果有锁: 则加S-lock --说明该记录被标记为删除，事务还未提交；
+
+   **加锁逻辑：**
+
+1. 插入时先对唯一索引（unique key 下文简称**UK**）进行冲突检测，如果存在目标行，先对目标行加[**S**锁](#SK)中的[**N**锁](#N)（**S** lock中的next key lock 下文简称**S**、**N**），这个锁如果最终插入成功（该记录在等待期间被其他事务删除，次所被同事删除）；
+
+2. 如果条件1成功，对应的间隙上增加[**X**锁](#X)中的[**I**锁](#I)；
+
+3. 如果条件2成功，插入记录，并对记录增加[X锁](#X)中的[**R**锁](#R)（不是N锁有可能是<a href="http://mysql.taobao.org/monthly/2020/09/06/">隐式锁</a>）
+
+   **总结Insert加索顺序:** [**S**](#S)中的[**N**锁](#N) -> [**X**](#X)中的[**I**锁](#I) -> [**X**](#X)中的[**R**锁](#R)
+
+   **官方文档:**
+
+```
+INSERT sets an exclusive lock on the inserted row. This lock is an index-record lock, not a next-key lock (that is, there is no gap lock) and does not prevent other sessions from inserting into the gap before the inserted row.Prior to inserting the row, a type of gap lock called an insertion intention gap lock is set. This lock signals the intent to insert in such a way that multiple transactions inserting into the same index gap need not wait for each other if they are not inserting at the same position within the gap.If a duplicate-key error occurs, a shared lock on the duplicate index record is set. This use of a shared lock can result in deadlock should there be multiple sessions trying to insert the same row if another session already has an exclusive lock. 
+```
+
+​	大体的意思是：insert会对插入成功的行加上排它锁，这个排它锁是个记录锁，而非next-key锁（当然更不是gap锁了），不会阻止其他并发的事务往这条记录之前插入记录。在插入之前，会先在插入记录所在的间隙加上一个插入意向gap锁（I锁），并发的事务可以对同一个gap加I锁。如果insert 的事务出现了duplicate-key error ，事务会对duplicate index record加共享锁。这个**共享锁在并发的情况下是会产生死锁的**，比如有两个并发的insert都对要对同一条记录加共享锁，而此时这条记录又被其他事务加上了排它锁，排它锁的事务提交或者回滚后，两个并发的insert操作是会发生死锁的。
 
 **3. 锁细节分析**
 
-1 事务 
-
-
-
-
-
-
-
-
-
-
+在并发情况下，事务T1 和 事务T2插入相同的数据，首先都增加了S锁中N锁（共享N锁），事务T1和事务T2都在等待为记录增加I锁，因G锁与I锁不兼容。造成了T1和T2的互相等待。
 
 
 
@@ -248,12 +270,17 @@ Next-Key Lock是结合了Gap Lock和Record Lock的一种锁定算法，在Next-K
 ### <span id="RR-Info">RR隔离级别</span>
 
 1. 锁是在索引上实现的  
-
 2. 假设有一个key，有5条记录， 1，3，5，7，9.  如果where id<5 ， 那么锁住的区间不是（-∞，5），而是(-∞,1],(1,3],(3,5] 多个区间组合而成  
-
 3. RR隔离级别使用的是：next-key lock算法，即：锁住 记录本身+区间
-
 4. next-key lock 降级为 record lock的情况
    如果是唯一索引，且查询条件得到的结果集是1条记录（等值，而不是范围），那么会降级为记录锁  
    典型的案例：where primary_key = 1 (会降级), 而不是 where primary_key < 10 （由于返回的结果集不仅仅一条，那么不会降级）
 5. 上锁，不仅仅对主键索引加锁，还需要对辅助索引加锁，这一点非常重要
+
+
+
+参考资料：
+
+https://blog.csdn.net/qq_16681169/article/details/73359670
+
+https://cloud.tencent.com/developer/article/1181532
