--- a/db/隔离级别及锁.md
+++ b/db/隔离级别及锁.md
@@ -22,7 +22,7 @@
 * **不可重复读**：同一个select语句，获得到的数据字段值发生变化；重点在<font color='red'>修改</font>
 * **幻读**：同一个select语句，获取到的数据的数量不一样；重点在于<font color="red">新增或者删除</font>
 
-从结果上看一个是数据值不一样、一个是数据记录数不一样。从避免问题发生的实现的角度看，区别较大：（已下内容先做了解，gap lock  MVCC后续会详细介绍）
+从结果上看一个是数据值不一样、一个是数据记录数不一样。从避免问题发生的实现的角度看，区别较大：（已下内容先做了解，gap lock  <a href="https://github.com/craftlook/Hello-World/blob/craftlook-Hello-World/db/MySQL-MVCC%E8%AF%A6%E8%A7%A3.md">MVCC后续会详细介绍</a>）
 
 * 对前者，[**RC**](#RC) 只需要锁定满足条件的记录，避免其他事务修改。eg：select ... for update,select ... in shard mode; [**RR**](#RR) 隔离下使用MVCC实现可重复读；
 * 对后者，要锁定满足条件的记录及所有记录之间的间隙(gap)，需要使用到gap lock。
