--- a/db/聚簇索引与非聚簇索引.md
+++ b/db/聚簇索引与非聚簇索引.md
@@ -6,6 +6,7 @@
 
 InnoDB主键索引使用的是聚簇索引，MyISAM 主键索引、二级索引都是用的是非聚簇索引
 
-如下图展示区别
+如下图展示区别：
+![avatar](https://github.com/craftlook/Hello-World/blob/craftlook-Hello-World/image/%E8%81%9A%E7%B0%87%26%E9%9D%9E%E8%81%9A%E7%B0%87%E5%8C%BA%E5%88%AB%E7%AE%80%E5%9B%BE.jpg)
 
-![https://github.com/craftlook/Hello-World/blob/craftlook-Hello-World/image/%E8%81%9A%E7%B0%87%26%E9%9D%9E%E8%81%9A%E7%B0%87%E5%8C%BA%E5%88%AB%E7%AE%80%E5%9B%BE.jpg]()
+
