--- a/algorithm/二分查找.md
+++ b/algorithm/二分查找.md
@@ -1,1 +1,53 @@
+# 二分查找
+
+## 概述
+
+**二分查找算法**（折半搜索算法、对数搜索算法）是一种在有序数组中查找某一个特定元素的搜索算法。搜索从数组的中间元素开始，如果正好是中间元素直接返回。如果大于或者小于中间元素，则在数组大于或小于中间元素的一半中查找，并且从一半中的中间元素开始比较。
+
+### 复杂度
+
+最坏情况下是对数时间复杂度，需要进行O(logn)次比较操作（n在此处是数组的元素数量，O是大O记号，log是对数）。二叉搜索树和B树数据结构就是基于二分查找算法的。
+
+* 时间复杂度：平均时间复杂度O(logn)、最坏时间复杂度O(logn)、最优时间复杂度O(1)
+* 空间复杂度：迭代：O(1)、递归：O(logn)
+
+## 代码
+
+递归方式
+
+```
+public static int binarySearch(int[] arr, int start, int end, int hkey){
+    if (start > end)
+        return -1;
+
+    int mid = start + (end - start)/2;    //防止溢位
+    if (arr[mid] > hkey)
+        return binarySearch(arr, start, mid - 1, hkey);
+    if (arr[mid] < hkey)
+        return binarySearch(arr, mid + 1, end, hkey);
+    return mid;  
+
+}
+```
+
+循环方式
+
+```
+public static int binarySearch(int[] arr, int start, int end, int hkey){
+    int result = -1;
+    while (start <= end){
+        int mid = start + (end - start)/2;    //防止溢位
+        if (arr[mid] > hkey)
+            end = mid - 1;
+        else if (arr[mid] < hkey)
+            start = mid + 1;
+        else {
+            result = mid ;  
+            break;
+        }
+    }
+    return result;
+}
+```
+
 
