--- a/algorithm/时间与空间复杂度.md
+++ b/algorithm/时间与空间复杂度.md
@@ -23,5 +23,5 @@
 
 这两个完全是可以等价交换的。比如我们想用
 
-`消耗时间长、换取占用空间少` 这样会使应用程序响应变慢。但是占用内存少
-`消耗大量空间、换取快速的响应` 应用缓存
+**消耗时间长、换取占用空间少** 这样会使应用程序响应变慢。但是占用内存少
+**消耗大量空间、换取快速的响应** 应用缓存
