--- a/algorithm/时间与空间复杂度.md
+++ b/algorithm/时间与空间复杂度.md
@@ -15,6 +15,11 @@
 5. O(n的立方) 立方阶
 6. O(2的n次方) (指数阶)
 
+* 平衡二叉树：O(logn)
+* B、B+树：O(logn)  n 是记录总数，底数是树的分查树
+  * B相较于平衡二叉树，将瘦高的二叉树变为矮胖的B树，减少树的层级，读取IO的次数减少，性能也会提升。 应用场景：文件系统、mongoDb的非关系型数据库
+  * B树是为了减少磁盘IO而创建出来的，因为二叉树虽然快，但是内存空间有限，一下子读取不了那么多。那就必须按照磁盘页的大小，依次读取节点到内存中。在数据量相同的情况下，因为B树每个节点上都存在数据。**B+相较于B树，只有在叶子节点才会存在数据。这种结构，一次性能放入内存的节点树数量增多**。 B+树中间节点放的是引用地址嘛，这样读取性能会提高。应用场景：Mysql数据库
+
 ### 空间复杂度
 
 空间复杂度，一般指占用的内存
